--- a/proyectos/web_python_todolist/web/src/components/Button.module.css
+++ b/proyectos/web_python_todolist/web/src/components/Button.module.css
@@ -1,13 +1,15 @@
 .button {
-    width: 100%;
+    width: 80%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #28a745;
     color: #fff;
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    margin: 5px;
+    font-size: 16px;
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #218838;
 }
