--- a/proyectos/web_python_todolist/web/src/components/LinkButton.module.css
+++ b/proyectos/web_python_todolist/web/src/components/LinkButton.module.css
@@ -1,14 +1,15 @@
 .linkButton {
-    width: 100%;
+    width: 80%;
     display: inline-block;
-    padding: 10px 15px;
+    padding: 10px;
     background-color: #007bff;
     color: #fff;
     text-decoration: none;
     border-radius: 3px;
     cursor: pointer;
-    margin-top: 10px;
+    margin: 5px;
     text-align: center;
+    font-size: 16px;
 }
 
 .linkButton:hover {
