--- a/proyectos/web_python_todolist/web/src/globalStyles.css
+++ b/proyectos/web_python_todolist/web/src/globalStyles.css
@@ -18,11 +18,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: #ffffff; /* Modo claro por defecto */
-  color: #222; /* Modo claro por defecto */
+  background-color: #f5f5f5;
+  color: #222;
 }
 
-/* Estilos para el Modo Oscuro */
 @media (prefers-color-scheme: dark) {
   html,
   body {
