--- a/proyectos/web_python_todolist/web/src/components/Logo.module.css
+++ b/proyectos/web_python_todolist/web/src/components/Logo.module.css
@@ -1,6 +1,13 @@
 .logo {
-    width: 350px;
-    margin: 0 auto 0;
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
     display: block;
     border-radius: 10px;
+}
+
+@media (max-width: 440px) {
+    .logo {
+        max-width: 80%;
+    }
 }
