--- a/proyectos/web_python_todolist/web/src/components/RouteButton.module.css
+++ b/proyectos/web_python_todolist/web/src/components/RouteButton.module.css
@@ -10,8 +10,21 @@
     margin: 5px;
     text-align: center;
     font-size: 16px;
+    border: none;
+    outline: none;
+    transition: background-color 0.3s ease;
 }
 
 .routeButton:hover {
     background-color: #0056b3;
+}
+
+.routeButton:active {
+    transform: scale(0.98);
+}
+
+@media (max-width: 400px) {
+    .routeButton {
+        width: 100%;
+    }
 }
