--- a/proyectos/web_python_todolist/web/src/pages/ListDetailPage.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/ListDetailPage.module.css
@@ -36,7 +36,8 @@
     background-color: var(--primary-darker);
 }
 
-.loading, .error {
+.loading,
+.error {
     font-size: 1.2em;
     color: var(--error);
 }
