--- a/proyectos/web_python_todolist/web/src/globalStyles.css
+++ b/proyectos/web_python_todolist/web/src/globalStyles.css
@@ -14,12 +14,12 @@ body {
 }
 
 #root {
-  color-scheme: light dark;
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    color-scheme: light dark;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* --- Variables Globales --- */
@@ -32,6 +32,8 @@ body {
     --table-header: #e9ecef;
     --table-header-text: #333;
     --secondary-text: #6c757d;
+    --secondary: #28a745;
+    --secondary-darker: #1e7e34;
     --error: #dc3545;
     --error-background: #f8d7da;
     --table-row-alt: #f1f1f1;
@@ -54,6 +56,8 @@ body {
         --table-header: #333;
         --table-header-text: #eee;
         --secondary-text: #bbb;
+        --secondary: #42b983;
+        --secondary-darker: #358f66;
         --error: #f8d7da;
         --error-background: #842029;
         --table-row-alt: #2a2a2a;
