--- a/proyectos/web_python_todolist/web/src/pages/General.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/General.module.css
@@ -52,12 +52,12 @@
     border-radius: 10px;
 }
 
-.errorContainer {
+.formErrorContainer {
     min-height: 20px;
     margin-bottom: 10px;
 }
 
-.error {
+.formError {
     color: var(--error);
     font-size: 14px;
     margin: 0;
