--- a/proyectos/web_python_todolist/web/src/pages/ToDoListPage.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/ToDoListPage.module.css
@@ -1,4 +1,4 @@
-.container {
+.todoContainer {
     width: 90%;
     max-width: 800px;
     margin: 20px auto;
@@ -10,19 +10,19 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.title {
+.todoTitle {
     font-size: 2em;
     margin-bottom: 20px;
     color: var(--primary);
 }
 
-.table {
+.todoTable {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
 }
 
-.table th {
+.todoTable th {
     background-color: var(--table-header);
     color: var(--table-header-text);
     padding: 12px;
@@ -30,26 +30,26 @@
     font-weight: bold;
 }
 
-.table td {
+.todoTable td {
     border: 1px solid var(--border);
     padding: 12px;
     text-align: center;
 }
 
-.table tbody tr:nth-child(odd) {
+.todoTable tbody tr:nth-child(odd) {
     background-color: var(--table-row-alt);
 }
 
-.table tbody tr:hover {
+.todoTable tbody tr:hover {
     background-color: var(--table-row-hover);
 }
 
-.noLists {
+.todoNoLists {
     font-style: italic;
     color: var(--secondary-text);
 }
 
-.fullScreenContainer {
+.todoFullScreenContainer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,11 +61,11 @@
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.messageContainer {
+.todoMessageContainer {
     text-align: center;
 }
 
-.loading {
+.todoLoading {
     color: var(--secondary-text);
     background-color: var(--table-row-alt);
     padding: 10px;
@@ -77,7 +77,7 @@
     justify-content: center;
 }
 
-.error {
+.todoError {
     color: var(--error);
     background-color: var(--error-background);
     padding: 10px;
@@ -86,7 +86,7 @@
     text-align: center;
 }
 
-.loaderIcon {
+.todoLoaderIcon {
     margin-right: 10px;
     animation: spin 2s linear infinite;
 }
@@ -95,14 +95,13 @@
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
 }
 
-.viewLink,
-.editLink {
+.todoViewLink,
+.todoEditLink {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -113,22 +112,22 @@
     transition: background-color 0.3s ease, transform 0.2s;
 }
 
-.viewLink {
+.todoViewLink {
     background-color: var(--primary);
     margin-right: 10px;
 }
 
-.editLink {
+.todoEditLink {
     background-color: var(--secondary);
     margin-left: 10px;
 }
 
-.viewLink:hover {
+.todoViewLink:hover {
     background-color: var(--primary-darker);
     transform: scale(1.1);
 }
 
-.editLink:hover {
+.todoEditLink:hover {
     background-color: var(--secondary-darker);
     transform: scale(1.1);
 }
