--- a/proyectos/web_python_todolist/web/src/pages/ToDoListPage.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/ToDoListPage.module.css
@@ -49,20 +49,18 @@
     color: var(--secondary-text);
 }
 
-.todoFullScreenContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
+.todoErrorContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .todoMessageContainer {
+    display: inline-block; /* Cambiado a inline-block */
     text-align: center;
+    padding: 10px; /* Reducido a 10px como se solicitó */
+    border-radius: 8px;
 }
 
 .todoLoading {
@@ -70,9 +68,8 @@
     background-color: var(--table-row-alt);
     padding: 10px;
     border-radius: 5px;
-    margin-top: 20px;
     text-align: center;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
 }
@@ -82,7 +79,6 @@
     background-color: var(--error-background);
     padding: 10px;
     border-radius: 5px;
-    margin-top: 20px;
     text-align: center;
 }
 
