fix(todolist): Estilos de errores y eliminar comentarios

--- a/proyectos/web_python_todolist/web/src/pages/ListDetailPage.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/ListDetailPage.module.css
@@ -97,7 +97,7 @@
 
 .detailDeleteButton {
     background-color: red;
-    border: none; /* Añadido para eliminar el borde blanco */
+    border: none;
 }
 
 .detailBackButton:hover {
