--- a/proyectos/web_python_todolist/web/src/pages/AdminPage.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/AdminPage.module.css
@@ -56,3 +56,50 @@
 .cambiarRolButton svg {
     margin: 0;
 }
+
+.adminErrorContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.adminMessageContainer {
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    border-radius: 8px;
+}
+
+.adminLoading {
+    color: var(--secondary-text);
+    background-color: var(--table-row-alt);
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.adminError {
+    color: var(--error);
+    background-color: var(--error-background);
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.adminLoaderIcon {
+    margin-right: 10px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
