--- a/proyectos/web_python_todolist/web/src/pages/EditListPage.module.css
+++ b/proyectos/web_python_todolist/web/src/pages/EditListPage.module.css
@@ -97,15 +97,10 @@
 }
 
 .editFullScreenContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .editMessageContainer {
